minor update to the Dune file; still trying to figure out how to make it nicely build for rtop integration

--- a/dune
+++ b/dune
@@ -1,2 +1,4 @@
 (library
-    (name RoseJSON))
+    (name RoseJSON)
+    (synopsis "a Yojson-like parsing library for ReasonML, with 0 dependencies")
+    (modes byte native))
